Code formatting.