@@ -2,7 +2,6 @@
 package com.github.armedis.redis;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.Assert.*;
 
 import java.time.LocalDateTime;
 import java.time.ZoneOffset;
@@ -28,8 +27,8 @@ public class TempTest {
         Long one = Long.valueOf(1);
         Long zero = Long.valueOf(0);
 //        assertThat(one.equals(zero)).isTrue();
-        assertThat(one.equals(new Long(1))).isTrue();
-        assertThat(zero.equals(new Long(0))).isTrue();
+        assertThat(one.equals(Long.valueOf(1))).isTrue();
+        assertThat(zero.equals(Long.valueOf(0))).isTrue();
 
     }
 
